2017-04-12, v0.2.0: various improvements
2017-02-05, v0.1.0: initial release