@@ -1,2 +1,3 @@
+2017-09-20, v0.2.1: add download_count to files to track the num of downloads
 2017-04-12, v0.2.0: various improvements
 2017-02-05, v0.1.0: initial release
